# epitech-zia

./: .gdb_history  .gitignore  CMakeLists.txt  README.md  compile.sh  conanfile.txt  file  index.html  test.ini  zia.conf  zia.json
certs/: cert.pem
common/: HTTP.hpp  Module.hpp  NonCopyable.hpp
common/HTTP/: FieldContainer.cpp  FieldContainer.hpp  ProcessingList.cpp  ProcessingList.hpp  Request.cpp  Request.hpp  Response.cpp  Response.hpp
common/Network/: Socket.hpp  SocketImpl.hpp  SocketSelector.hpp
common/Network/Windows/: SocketImpl.hpp
module/: CMakeLists.txt
modules/: CMakeLists.txt
modules/FileServe/: CMakeLists.txt  FileServeModule.cpp  FileServeModule.hpp
modules/HTTP/: CMakeLists.txt  HTTPModule.cpp  HTTPModule.hpp
modules/PHPCGI/: CMakeLists.txt  PHPCGIModule.cpp  PHPCGIModule.hpp
modules/SSL/: CMakeCache.txt  CMakeLists.txt  Colors.h  Makefile  SSLModule.cpp  SSLModule.hpp  cmake_install.cmake
modules/Test/: CMakeLists.txt  TestModule.cpp  TestModule.hpp
server/: CMakeLists.txt
server/header/: Server.hpp
server/src/: Main.cpp  Server.cpp
src/: Export.hpp  HTTP.hpp  Logger.cpp  Logger.hpp  Module.hpp  ModuleLoader.cpp  ModuleLoader.hpp  ThreadPool.hpp  Zia.cpp  Zia.hpp  json.hpp  main.cpp
src/Config/: IConfig.hpp  INIConfig.cpp  INIConfig.hpp
src/HTTP/: FieldContainer.cpp  FieldContainer.hpp  Request.cpp  Request.hpp  Response.cpp  Response.hpp
src/Network/: IpAddress.cpp  IpAddress.hpp  Packet.cpp  Packet.hpp  Socket.cpp  Socket.hpp  SocketSelector.cpp  SocketSelector.hpp  TcpListener.cpp  TcpListener.hpp  TcpSocket.cpp  TcpSocket.hpp  UdpSocket.cpp  UdpSocket.hpp
src/Network/Unix/: SocketImpl.hpp
sslkeys/: key.pem
www/a/: index.html
www/a/public/css/: style.css
www/a/public/js/: app.js
www/b/: index.html  index.php
www/b/public/css/: style.css
www/b/public/js/: main.js
